--- a/{{ cookiecutter.project_name }}/justfile
+++ b/{{ cookiecutter.project_name }}/justfile
@@ -6,7 +6,7 @@ python_dir := if os_family() == "windows" { "./.venv/Scripts" } else { "./.venv/
 python := python_dir + if os_family() == "windows" { "/python.exe" } else { "/python" }
 venv_exists := bool_prefix + path_exists(".venv")
 run_clang_format := "external" / "run-clang-format" / "run-clang-format.py"
-cmake_files := replace(`git ls-files '**/CMakeLists.txt'`, "\n", " ")
+cmake_files := replace(`git ls-files '**CMakeLists.txt'`, "\n", " ")
 
 preset := if os() == "linux" {
     "ci-linux"
@@ -25,6 +25,10 @@ setup:
     {{ venv_exists }} || {{ system_python }} -m venv .venv --upgrade-deps
     {{ python }} -m pip install --upgrade pip wheel pip-tools --quiet
     {{ python }} -m piptools sync --quiet
+    just configure
+
+# Generates projects
+configure:
     cmake --preset {{preset}}
 
 # Compiles the project
@@ -62,6 +66,18 @@ lint:
 lint-fix: && cpp-fmt
     cmake --build --preset ci-iwyu | fix_includes.py --comments --update_comments
     cmake --preset ci-clang-tidy-fix && cmake --build --preset ci-clang-tidy-fix
+
+# Runs AddressSanitizer (ASan) and UndefinedBehaviorSanitizer (UBSan)
+[macos]
+asan-ubsan:
+    just config=Release preset=ci-macos-asan-ubsan configure build
+    ctest --preset ci-macos-asan-ubsan --build-config release
+
+# Runs ThreadSanitizer (TSan)
+[macos]
+tsan:
+    just config=Release preset=ci-macos-tsan configure build
+    ctest --preset ci-macos-tsan --build-config release
 
 # Runs CI validation
 ci:
