--- a/{{ cookiecutter.project_name }}/requirements.txt
+++ b/{{ cookiecutter.project_name }}/requirements.txt
@@ -6,15 +6,38 @@
 #
 black==22.12.0
     # via -r requirements.in
+cfgv==3.3.1
+    # via pre-commit
+clang-format==15.0.7
+    # via -r requirements.in
 click==8.1.3
     # via black
 cmakelang==0.6.13
     # via -r requirements.in
+distlib==0.3.6
+    # via virtualenv
+filelock==3.9.0
+    # via virtualenv
+identify==2.5.17
+    # via pre-commit
 mypy-extensions==0.4.3
     # via black
+nodeenv==1.7.0
+    # via pre-commit
 pathspec==0.10.3
     # via black
 platformdirs==2.6.2
-    # via black
+    # via
+    #   black
+    #   virtualenv
+pre-commit==3.0.4
+    # via -r requirements.in
+pyyaml==6.0
+    # via pre-commit
 six==1.16.0
     # via cmakelang
+virtualenv==20.17.1
+    # via pre-commit
+
+# The following packages are considered to be unsafe in a requirements file:
+# setuptools
