Refactor CMake Xcode and project flags

--- a/{{ cookiecutter.project_name }}/CMakeLists.txt
+++ b/{{ cookiecutter.project_name }}/CMakeLists.txt
@@ -1,44 +1,51 @@
 # =============================
 # Preamble
 # =============================
-cmake_minimum_required(VERSION 3.23)
+cmake_minimum_required(VERSION 3.24)
 project(
   {{ cookiecutter.project_name }}
   VERSION 0.1.0
   LANGUAGES CXX)
-enable_testing()
 
 # =============================
 # Project wide setup
 # =============================
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/cmake)
-set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_CXX_STANDARD_REQUIRED YES)
-set(CMAKE_CXX_EXTENSIONS NO)
+if(PROJECT_IS_TOP_LEVEL)
+  set(CMAKE_CXX_STANDARD 20)
+  set(CMAKE_CXX_STANDARD_REQUIRED YES)
+  set(CMAKE_CXX_EXTENSIONS NO)
+  set(CMAKE_COMPILE_WARNING_AS_ERROR ON) # default to warnings as errors
 
-set(CMAKE_EXPORT_COMPILE_COMMANDS ON) # improve Intellisense
-set_property(GLOBAL PROPERTY USE_FOLDERS ON) # use folders in IDEs
-set(CMAKE_XCODE_GENERATE_SCHEME YES)
+  set(CMAKE_EXPORT_COMPILE_COMMANDS ON) # improve Intellisense
+  set_property(GLOBAL PROPERTY USE_FOLDERS ON) # use folders in IDEs
+  set(CMAKE_XCODE_GENERATE_SCHEME YES)
 
-# Restrict valid build types for non-multi-config generators, e.g. cannot
-# accidently use build type 'Dbg' with Ninja.
-get_property(isMultiConfig GLOBAL PROPERTY GENERATOR_IS_MULTI_CONFIG)
-if(NOT isMultiConfig)
-  set(_allowable_build_types Debug Release RelWithDebInfo)
-  set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS
-                                               "${_allowable_build_types}")
-  if(NOT CMAKE_BUILD_TYPE)
-    set(CMAKE_BUILD_TYPE
-        Debug
-        CACHE STRING "" FORCE)
-  elseif(NOT CMAKE_BUILD_TYPE IN_LIST _allowable_build_types)
-    message(FATAL_ERROR "Invalid build type: ${CMAKE_BUILD_TYPE}")
+  include(CTest)
+
+  # Restrict valid build types for non-multi-config generators, e.g. cannot
+  # accidently use build type 'Dbg' with Ninja.
+  get_property(isMultiConfig GLOBAL PROPERTY GENERATOR_IS_MULTI_CONFIG)
+  if(NOT isMultiConfig)
+    set(_allowable_build_types Debug Release RelWithDebInfo)
+    set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS
+                                                 "${_allowable_build_types}")
+    if(NOT CMAKE_BUILD_TYPE)
+      set(CMAKE_BUILD_TYPE
+          Debug
+          CACHE STRING "" FORCE)
+    elseif(NOT CMAKE_BUILD_TYPE IN_LIST _allowable_build_types)
+      message(FATAL_ERROR "Invalid build type: ${CMAKE_BUILD_TYPE}")
+    endif()
   endif()
+
+  include(Xcode)
 endif()
 
+option({{ cookiecutter.project_name|upper }}_BUILD_TESTING
+       "Enable tests even when included as a subproject.")
 option(ENABLE_ASAN_UBSAN
-       "Enable AddressSanitizer (ASan) and UndefinedBehavior Sanitizer (UBSan)"
-       OFF)
+       "Enable AddressSanitizer (ASan) and UndefinedBehavior Sanitizer (UBSan)")
 if(ENABLE_ASAN_UBSAN)
   add_compile_options(-fsanitize=address -fsanitize=undefined)
   add_link_options(-fsanitize=address -fsanitize=undefined)
@@ -47,46 +54,14 @@ if(ENABLE_ASAN_UBSAN)
   set(CMAKE_XCODE_SCHEME_UNDEFINED_BEHAVIOUR_SANITIZER ON)
 endif()
 
-option(ENABLE_TSAN "Enable ThreadSanitizer (TSan)" OFF)
+option(ENABLE_TSAN "Enable ThreadSanitizer (TSan)")
 if(ENABLE_TSAN)
   add_compile_options(-fsanitize=thread)
   add_link_options(-fsanitize=thread)
   set(CMAKE_XCODE_SCHEME_THREAD_SANITIZER ON)
 endif()
 
-set(CMAKE_XCODE_ATTRIBUTE_CODE_SIGN_IDENTITY
-    "-"
-    CACHE STRING "")
-set(CMAKE_XCODE_ATTRIBUTE_CLANG_ENABLE_OBJC_WEAK YES)
-set(CMAKE_XCODE_ATTRIBUTE_CLANG_WARN_BLOCK_CAPTURE_AUTORELEASING YES)
-set(CMAKE_XCODE_ATTRIBUTE_CLANG_WARN_BOOL_CONVERSION YES)
-set(CMAKE_XCODE_ATTRIBUTE_CLANG_WARN_COMMA YES)
-set(CMAKE_XCODE_ATTRIBUTE_CLANG_WARN_CONSTANT_CONVERSION YES)
-set(CMAKE_XCODE_ATTRIBUTE_CLANG_WARN_DEPRECATED_OBJC_IMPLEMENTATIONS YES)
-set(CMAKE_XCODE_ATTRIBUTE_CLANG_WARN_EMPTY_BODY YES)
-set(CMAKE_XCODE_ATTRIBUTE_CLANG_WARN_ENUM_CONVERSION YES)
-set(CMAKE_XCODE_ATTRIBUTE_CLANG_WARN_INFINITE_RECURSION YES)
-set(CMAKE_XCODE_ATTRIBUTE_CLANG_WARN_INT_CONVERSION YES)
-set(CMAKE_XCODE_ATTRIBUTE_CLANG_WARN_NON_LITERAL_NULL_CONVERSION YES)
-set(CMAKE_XCODE_ATTRIBUTE_CLANG_WARN_OBJC_IMPLICIT_RETAIN_SELF YES)
-set(CMAKE_XCODE_ATTRIBUTE_CLANG_WARN_OBJC_LITERAL_CONVERSION YES)
-set(CMAKE_XCODE_ATTRIBUTE_CLANG_WARN_QUOTED_INCLUDE_IN_FRAMEWORK_HEADER YES)
-set(CMAKE_XCODE_ATTRIBUTE_CLANG_WARN_RANGE_LOOP_ANALYSIS YES)
-set(CMAKE_XCODE_ATTRIBUTE_CLANG_WARN_STRICT_PROTOTYPES YES)
-set(CMAKE_XCODE_ATTRIBUTE_CLANG_WARN_SUSPICIOUS_MOVE YES)
-set(CMAKE_XCODE_ATTRIBUTE_CLANG_WARN_UNREACHABLE_CODE YES)
-set(CMAKE_XCODE_ATTRIBUTE_CLANG_WARN__DUPLICATE_METHOD_MATCH YES)
-set(CMAKE_XCODE_ATTRIBUTE_DEAD_CODE_STRIPPING YES)
-set(CMAKE_XCODE_ATTRIBUTE_ENABLE_STRICT_OBJC_MSGSEND YES)
-set(CMAKE_XCODE_ATTRIBUTE_ENABLE_TESTABILITY[variant=Debug] YES)
-set(CMAKE_XCODE_ATTRIBUTE_GCC_NO_COMMON_BLOCKS YES)
-set(CMAKE_XCODE_ATTRIBUTE_GCC_WARN_64_TO_32_BIT_CONVERSION YES)
-set(CMAKE_XCODE_ATTRIBUTE_GCC_WARN_ABOUT_RETURN_TYPE YES)
-set(CMAKE_XCODE_ATTRIBUTE_GCC_WARN_UNDECLARED_SELECTOR YES)
-set(CMAKE_XCODE_ATTRIBUTE_GCC_WARN_UNINITIALIZED_AUTOS YES)
-set(CMAKE_XCODE_ATTRIBUTE_GCC_WARN_UNUSED_FUNCTION YES)
-set(CMAKE_XCODE_ATTRIBUTE_GCC_WARN_UNUSED_VARIABLE YES)
-set(CMAKE_XCODE_ATTRIBUTE_ONLY_ACTIVE_ARCH[variant=Debug] YES)
+include(ProjectFlags)
 
 # =============================
 # Main targets built by this project
