--- a/{{ cookiecutter.project_name }}/src/{{ cookiecutter.project_name }}/CMakeLists.txt
+++ b/{{ cookiecutter.project_name }}/src/{{ cookiecutter.project_name }}/CMakeLists.txt
@@ -1,15 +1,15 @@
 # =============================
 # Define targets
 # =============================
-add_library({{ cookiecutter.__cmake_target_name }} {{ "${" }}{{ cookiecutter.project_name }}_SOURCE_DIR{{ "}" }}/include/{{ cookiecutter.project_name }}/lib.hpp  lib.cpp)
-add_library({{ cookiecutter.__cmake_target_name_ns }} ALIAS {{ cookiecutter.__cmake_target_name }})
-target_include_directories({{ cookiecutter.__cmake_target_name }} PUBLIC {{ "${" }}{{ cookiecutter.project_name }}_SOURCE_DIR{{ "}" }}/include)
-target_link_libraries({{ cookiecutter.__cmake_target_name }} PRIVATE {{ cookiecutter.__cmake_project_flags_target_name_ns }})
+add_library({{ cookiecutter.__cmake_lib_target_name }} {{ "${" }}{{ cookiecutter.project_name }}_SOURCE_DIR{{ "}" }}/include/{{ cookiecutter.project_name }}/lib.hpp  lib.cpp)
+add_library({{ cookiecutter.__cmake_lib_target_name_ns }} ALIAS {{ cookiecutter.__cmake_lib_target_name }})
+target_include_directories({{ cookiecutter.__cmake_lib_target_name }} PUBLIC {{ "${" }}{{ cookiecutter.project_name }}_SOURCE_DIR{{ "}" }}/include)
+target_link_libraries({{ cookiecutter.__cmake_lib_target_name }} PRIVATE {{ cookiecutter.__cmake_project_flags_target_name_ns }})
 
 find_package(GTest CONFIG REQUIRED)
 add_executable({{ cookiecutter.__cmake_test_target_name }} lib.test.cpp)
 add_executable({{ cookiecutter.__cmake_test_target_name_ns }} ALIAS {{ cookiecutter.__cmake_test_target_name }})
-target_link_libraries({{ cookiecutter.__cmake_test_target_name }} PRIVATE {{ cookiecutter.__cmake_project_flags_target_name_ns }} {{ cookiecutter.__cmake_target_name_ns }} GTest::gtest_main)
+target_link_libraries({{ cookiecutter.__cmake_test_target_name }} PRIVATE {{ cookiecutter.__cmake_project_flags_target_name_ns }} {{ cookiecutter.__cmake_lib_target_name_ns }} GTest::gtest_main)
 
 # =============================
 # Testing
